[package]
name = "anew"
version = "1.0.0"
authors = ["Roman Kvasnytskyi <roman@kvasnytskyi.net>"]
edition = "2021"

[dependencies]
pico-args = { version = "0.5.0", features = ["combined-flags"] }

[dev-dependencies]
predicates = "3.1.2"
assert_cmd = "2.0.16"
criterion = "0.5.1"
rand = "0.8.5"

[[bin]]
name = "anew"
path = "src/main.rs"
bench = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
